compiler/src/antlr4/JjQueryParser.java
package antlr4;

// Generated from JjQuery.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class JjQueryParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__1 = 1, T__0 = 2, ID = 3, INT = 4, OP = 5,
			JQUERYBLOCKSTART = 6, JQUERYBLOCKEND = 7, ASSIGN = 8, DOLLAR = 9,
			OPEN_PARENTHESES = 10, CLOSE_PARENTHESES = 11, OPEN_BRACKET = 12,
			CLOSE_BRACKET = 13, QUOTES = 14, APOSTROPHE = 15, SEMICOLON = 16,
			NEWLINE = 17, SINGLE_LINE_COMMENT = 18, MULTI_LINE_COMMENT = 19,
			WS = 20;
	public static final String[] tokenNames = { "<INVALID>", "'in'", "'out'",
			"ID", "INT", "OP", "'/*@jQ'", "JQUERYBLOCKEND", "'='", "'$'",
			"'('", "')'", "'['", "']'", "'\"'", "'''", "';'", "NEWLINE",
			"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "WS" };
	public static final int RULE_main = 0, RULE_java = 1, RULE_jQueryBlock = 2,
			RULE_jQuery = 3, RULE_in = 4, RULE_out = 5, RULE_assign = 6,
			RULE_selector = 7;
	public static final String[] ruleNames = { "main", "java", "jQueryBlock",
			"jQuery", "in", "out", "assign", "selector" };

	@Override
	public String getGrammarFileName() {
		return "JjQuery.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public JjQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
				_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public List<JavaContext> java() {
			return getRuleContexts(JavaContext.class);
		}

		public List<JQueryBlockContext> jQueryBlock() {
			return getRuleContexts(JQueryBlockContext.class);
		}

		public JavaContext java(int i) {
			return getRuleContext(JavaContext.class, i);
		}

		public JQueryBlockContext jQueryBlock(int i) {
			return getRuleContext(JQueryBlockContext.class, i);
		}

		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_main;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterMain(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(16);
				java();
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == JQUERYBLOCKSTART) {
					{
						{
							setState(18);
							_errHandler.sync(this);
							_alt = 1;
							do {
								switch (_alt) {
								case 1: {
									{
										setState(17);
										jQueryBlock();
									}
								}
									break;
								default:
									throw new NoViableAltException(this);
								}
								setState(20);
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,
										0, _ctx);
							} while (_alt != 2
									&& _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
							setState(22);
							java();
						}
					}
					setState(28);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JavaContext extends ParserRuleContext {
		public JavaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_java;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterJava(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitJava(this);
		}
	}

	public final JavaContext java() throws RecognitionException {
		JavaContext _localctx = new JavaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_java);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(32);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				while (_alt != 1
						&& _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1 + 1) {
						{
							{
								setState(29);
								matchWildcard();
							}
						}
					}
					setState(34);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JQueryBlockContext extends ParserRuleContext {
		public TerminalNode JQUERYBLOCKEND() {
			return getToken(JjQueryParser.JQUERYBLOCKEND, 0);
		}

		public JQueryContext jQuery(int i) {
			return getRuleContext(JQueryContext.class, i);
		}

		public TerminalNode JQUERYBLOCKSTART() {
			return getToken(JjQueryParser.JQUERYBLOCKSTART, 0);
		}

		public List<TerminalNode> SINGLE_LINE_COMMENT() {
			return getTokens(JjQueryParser.SINGLE_LINE_COMMENT);
		}

		public List<JQueryContext> jQuery() {
			return getRuleContexts(JQueryContext.class);
		}

		public TerminalNode SINGLE_LINE_COMMENT(int i) {
			return getToken(JjQueryParser.SINGLE_LINE_COMMENT, i);
		}

		public JQueryBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_jQueryBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterJQueryBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitJQueryBlock(this);
		}
	}

	public final JQueryBlockContext jQueryBlock() throws RecognitionException {
		JQueryBlockContext _localctx = new JQueryBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jQueryBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(35);
				match(JQUERYBLOCKSTART);
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1)
						| (1L << T__0) | (1L << ID))) != 0)) {
					{
						{
							setState(36);
							jQuery();
							setState(38);
							_la = _input.LA(1);
							if (_la == SINGLE_LINE_COMMENT) {
								{
									setState(37);
									match(SINGLE_LINE_COMMENT);
								}
							}

						}
					}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(45);
				match(JQUERYBLOCKEND);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JQueryContext extends ParserRuleContext {
		public OutContext out() {
			return getRuleContext(OutContext.class, 0);
		}

		public AssignContext assign() {
			return getRuleContext(AssignContext.class, 0);
		}

		public InContext in() {
			return getRuleContext(InContext.class, 0);
		}

		public JQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_jQuery;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterJQuery(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitJQuery(this);
		}
	}

	public final JQueryContext jQuery() throws RecognitionException {
		JQueryContext _localctx = new JQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_jQuery);
		try {
			setState(50);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
					setState(47);
					in();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
					setState(48);
					out();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
					setState(49);
					assign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() {
			return getToken(JjQueryParser.SEMICOLON, 0);
		}

		public TerminalNode ID() {
			return getToken(JjQueryParser.ID, 0);
		}

		public InContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_in;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterIn(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitIn(this);
		}
	}

	public final InContext in() throws RecognitionException {
		InContext _localctx = new InContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_in);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(52);
				match(T__1);
				setState(53);
				match(ID);
				setState(54);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() {
			return getToken(JjQueryParser.SEMICOLON, 0);
		}

		public TerminalNode ID() {
			return getToken(JjQueryParser.ID, 0);
		}

		public OutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_out;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterOut(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitOut(this);
		}
	}

	public final OutContext out() throws RecognitionException {
		OutContext _localctx = new OutContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_out);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(56);
				match(T__0);
				setState(57);
				match(ID);
				setState(58);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() {
			return getToken(JjQueryParser.SEMICOLON, 0);
		}

		public TerminalNode ASSIGN() {
			return getToken(JjQueryParser.ASSIGN, 0);
		}

		public TerminalNode CLOSE_PARENTHESES() {
			return getToken(JjQueryParser.CLOSE_PARENTHESES, 0);
		}

		public TerminalNode OPEN_PARENTHESES() {
			return getToken(JjQueryParser.OPEN_PARENTHESES, 0);
		}

		public List<TerminalNode> ID() {
			return getTokens(JjQueryParser.ID);
		}

		public TerminalNode QUOTES(int i) {
			return getToken(JjQueryParser.QUOTES, i);
		}

		public TerminalNode DOLLAR() {
			return getToken(JjQueryParser.DOLLAR, 0);
		}

		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class, 0);
		}

		public List<TerminalNode> QUOTES() {
			return getTokens(JjQueryParser.QUOTES);
		}

		public TerminalNode ID(int i) {
			return getToken(JjQueryParser.ID, i);
		}

		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_assign;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterAssign(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(60);
				match(ID);
				setState(61);
				match(ASSIGN);
				setState(62);
				match(DOLLAR);
				setState(63);
				match(OPEN_PARENTHESES);
				setState(64);
				match(QUOTES);
				setState(65);
				match(ID);
				setState(66);
				selector();
				setState(67);
				match(ID);
				setState(68);
				match(QUOTES);
				setState(69);
				match(CLOSE_PARENTHESES);
				setState(70);
				match(SEMICOLON);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorContext extends ParserRuleContext {
		public TerminalNode OP() {
			return getToken(JjQueryParser.OP, 0);
		}

		public TerminalNode CLOSE_BRACKET() {
			return getToken(JjQueryParser.CLOSE_BRACKET, 0);
		}

		public List<TerminalNode> ID() {
			return getTokens(JjQueryParser.ID);
		}

		public TerminalNode OPEN_BRACKET() {
			return getToken(JjQueryParser.OPEN_BRACKET, 0);
		}

		public TerminalNode APOSTROPHE(int i) {
			return getToken(JjQueryParser.APOSTROPHE, i);
		}

		public List<TerminalNode> APOSTROPHE() {
			return getTokens(JjQueryParser.APOSTROPHE);
		}

		public TerminalNode ID(int i) {
			return getToken(JjQueryParser.ID, i);
		}

		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_selector;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).enterSelector(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof JjQueryListener)
				((JjQueryListener) listener).exitSelector(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selector);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(72);
				match(OPEN_BRACKET);
				setState(73);
				match(ID);
				setState(74);
				match(OP);
				setState(75);
				match(APOSTROPHE);
				setState(76);
				match(ID);
				setState(77);
				match(APOSTROPHE);
				setState(78);
				match(CLOSE_BRACKET);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN = new ATNDeserializer()
			.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}